--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <div>
   <div class="container">
-     <h1>Recursive Tree</h1>
+     <h1>Refresh to Redraw</h1>
 		<canvas id="forest" height="700" width="1400"></canvas>
   </div>
 </div>
